@@ -7,3 +7,4 @@ StanzaFile/Lilo.pm
 StanzaFile/Makefile.PL
 Stanza.pm
 StanzaFile.pm
+t/use.t
