@@ -1,0 +1,14 @@
+#!/usr/bin/env perl -w
+use strict;
+use Test;
+BEGIN { plan tests => 1 }
+
+use Stanza ;
+use StanzaFile ;
+use StanzaFile::Grub ;
+use StanzaFile::Lilo ;
+
+ok(1);
+
+exit;
+__END__
