@@ -11,8 +11,9 @@ Changes as of: 20-May-2003
         Make sure package variables don't leak.
         Make the test harness happy.
 
-    StanzaFile.pm (1.03): Dick Munroe (munroe@csworks.com)
+    StanzaFile.pm (1.04): Dick Munroe (munroe@csworks.com)
         Make the test harness happy.
+        Forgot the tests in the MANIFEST.
 
 17-May-2003:
     Grub.pm: Dick Munroe (munroe@csworks.com)
